Added deck API implementation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
         <div id="head">
             <h3 id="title">War</h3>
         </div>
-
+        <div id="body">
+            <div id="tableSide">
+                <table>
+                    <th>Your Cards:</th>
+                    <th>Opponent Cards:</th>
+                </table>
+                <button onclick="fetchCards();" id="gameBttn">
+                    Start Game
+                </button>
+            </div>
+        </div>
         <script src="./script.js" defer></script>
     </body>
 </html>
