--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </button>
             </div>
             <div id="gameSide">
-                <button>Play War!</button>
+                <button id="warBttn" onclick="playGame();">Play War!</button>
                 <div id="cardArea">
-                    <img src="">
-                    <img src="">
+                    <img src="" id="oppCard">
+                    <img src="" id="userCard">
                 </div>
             </div>
         </div>
