Added war functionality/Design changes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,24 @@
             <div id="gameSide">
                 <button id="warBttn" onclick="playGame();">Play War!</button>
                 <div id="cardArea">
-                    <img src="" id="oppCard">
-                    <img src="" id="userCard">
+                    <div id="oppCards">
+                        <img src="" id="oppCard">
+                        <div id="warCards">
+                            <img src="" id="oppWarCards">
+                            <img src="" id="oppWarCards">
+                            <img src="" id="oppWarCards">
+                        </div>
+                        <img src="" id="oppWarCard">
+                    </div>
+                    <div id="userCards">
+                        <img src="" id="userCard">
+                        <div id="warCards">
+                            <img src="" id="userWarCards">
+                            <img src="" id="userWarCards">
+                            <img src="" id="userWarCards">
+                        </div>
+                        <img src="" id="userWarCard">
+                    </div>
                 </div>
             </div>
         </div>
