--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </tbody>
                 </table>
                 <button onclick="startGame();" id="gameBttn">
-                    Start Game
+                    Start New Game
                 </button>
             </div>
             <div id="gameSide">
