Slight Design changes

--- a/index.html
+++ b/index.html
@@ -32,16 +32,8 @@
             <div id="gameSide">
                 <button id="warBttn" onclick="playGame();">Play War!</button>
                 <div id="cardArea">
-                    <div id="oppCards">
-                        <img src="" id="oppCard">
-                        <div id="warCards">
-                            <img src="" id="oppWarCards">
-                            <img src="" id="oppWarCards">
-                            <img src="" id="oppWarCards">
-                        </div>
-                        <img src="" id="oppWarCard">
-                    </div>
                     <div id="userCards">
+                        <h3 id="sideLabel">Your Cards:</h3>
                         <img src="" id="userCard">
                         <div id="warCards">
                             <img src="" id="userWarCards">
@@ -49,6 +41,16 @@
                             <img src="" id="userWarCards">
                         </div>
                         <img src="" id="userWarCard">
+                    </div>
+                    <div id="oppCards">
+                        <h3 id="sideLabel">Opponent Cards:</h3>
+                        <img src="" id="oppCard">
+                        <div id="warCards">
+                            <img src="" id="oppWarCards">
+                            <img src="" id="oppWarCards">
+                            <img src="" id="oppWarCards">
+                        </div>
+                        <img src="" id="oppWarCard">
                     </div>
                 </div>
             </div>
