fixed the card sizing

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <div id="head">
             <h3 id="title">War</h3>
         </div>
+        <!--Add Error text-->
+        <!--Add Win game text-->
         <div id="body">
             <div id="tableSide">
                 <table id="scoreTable">
+                    <h3 id="winLoseMsg"></h3>
                     <caption>Game Score</caption>
                     <thead>
                         <tr>
@@ -36,9 +39,9 @@
                         <h3 id="sideLabel">Your Cards:</h3>
                         <img src="" id="userCard">
                         <div id="warCards">
-                            <img src="" id="userWarCards">
-                            <img src="" id="userWarCards">
-                            <img src="" id="userWarCards">
+                            <img src="" id="warCard">
+                            <img src="" id="warCard">
+                            <img src="" id="warCard">
                         </div>
                         <img src="" id="userWarCard">
                     </div>
@@ -46,9 +49,9 @@
                         <h3 id="sideLabel">Opponent Cards:</h3>
                         <img src="" id="oppCard">
                         <div id="warCards">
-                            <img src="" id="oppWarCards">
-                            <img src="" id="oppWarCards">
-                            <img src="" id="oppWarCards">
+                            <img src="" id="warCard">
+                            <img src="" id="warCard">
+                            <img src="" id="warCard">
                         </div>
                         <img src="" id="oppWarCard">
                     </div>
